--- a/practice-anims-mockup-css/style.css
+++ b/practice-anims-mockup-css/style.css
@@ -125,6 +125,10 @@ body {
     border-bottom: 4px solid var(--yellow-01);
 }
 
+.menu {
+    display: none;
+}
+
 .main-content {
     grid-area: section;
     display: flex;
@@ -373,7 +377,6 @@ body {
 
 .footer div img {
     margin: 0 40px;
-    min-width: 200px;
     width: 200px;
     border-radius: 20px;
     transform: scale(1);
@@ -420,8 +423,8 @@ body {
     right: 0;
     left: 0;
     z-index: 3;
-    animation: loader .2s linear forwards;
-    -webkit-animation: loader .2s linear forwards;
+    animation: loader 2s linear forwards;
+    -webkit-animation: loader 2s linear forwards;
 }
 
 .loader div {
@@ -435,8 +438,8 @@ body {
     -moz-transform: scale(0);
     -ms-transform: scale(0);
     -o-transform: scale(0);
-    animation: scaling .2s ease-in-out infinite;
-    -webkit-animation: scaling .2s ease-in-out infinite;
+    animation: scaling 2s ease-in-out infinite;
+    -webkit-animation: scaling 2s ease-in-out infinite;
 }
 
 @keyframes loader {
@@ -506,7 +509,7 @@ body {
     width: 80%;
     height: 80%;
     display: grid;
-    grid-template: 506px 253px / 1fr;
+    grid-template: 10% 60% 20% 10%/ 100%;
     place-items: center;
     position: relative;
     border-radius: 20px;
@@ -517,9 +520,17 @@ body {
 }
 
 .modal__content--slider {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     transform-style: preserve-3d;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: grid;
+    grid-template: 100% / 100%;
+    place-content: center;
+    align-items: center;
+    place-items: center;
+    place-self: center;
 }
 
 #modal__content--close {
@@ -554,9 +565,14 @@ body {
 }
 
 .cards {
-    position: relative;
-    width: 100%;
+    grid-column: 1/4;
+    grid-row: 1/2;
     height: 100%;
+    width: 100%;
+    align-items: center;
+    place-self: center;
+    place-items: center;
+    place-content: center;
 }
 
 .card {
@@ -565,13 +581,15 @@ body {
     right: 0;
     margin: 0 auto;
     cursor: pointer;
-    display: grid;
     place-items: center;
+    place-self: center;
     background: var(--yellow-01);
-    width: 100%;
+    width: 60%;
     height: 100%;
-    top: 40px;
     transition: transform 0.5s ease;
+    place-self: center;
+    place-items: center;
+    place-content: center;
 }
 
 #radio-1:checked~.cards #card-1,
@@ -616,23 +634,29 @@ body {
     display: none;
 }
 
-.modal__content .modal__content__button {
-    display: grid;
+.modal__content .modal__content__text {
+    height: 100%;
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 3/4;
+    margin: 0 10px;
+    text-align: center;
+    font-size: 1.4rem;
+    color: var(--yellow-06);
+    overflow-y: auto;
+    display: grid;
+    place-self: center;
+    place-items: center;
 }
 
-.modal__content .modal__content--slider {
+.modal__content .modal__content__button {
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 4/5;
 }
 
 .modal__content h2 {
     font-size: 2.4rem;
     grid-column: 1/2;
     grid-row: 1/2;
-    align-self: flex-start;
-    margin-top: 20px;
     color: var(--yellow-06);
     transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
@@ -652,8 +676,8 @@ body {
 }
 
 .modal__content .modal__content__button button {
-    position: absolute;
-    bottom: 10px;
+    position: relative;
+    place-self: center;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -695,13 +719,6 @@ body {
     background: var(--yellow-04);
 }
 
-.modal__content .modal__content__button p {
-    margin: 0 40px;
-    text-align: center;
-    font-size: 1.4rem;
-    color: var(--yellow-06);
-}
-
 .modal__content .modal__content__button button img {
     width: 40px;
     height: 30px;
@@ -720,16 +737,28 @@ body {
     top: 10px;
 }
 
-@media (max-width: 1366px) {
-    .main-content h1 {
-        width: 100%
-    }
-    .main-content p:nth-child(3) {
-        width: 100%
-    }
-    .main-content p:nth-child(2) {
-        width: 100%
-    }
+.modal__title {
+    width: 100%;
+    height: 100%;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
+    display: grid;
+    grid-template: 50% 50%/100%;
+    place-content: center;
+}
+
+.modal__title h2 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    place-self: center;
+    place-items: center;
+    margin-bottom: 10px;
+}
+
+.modal__title img {
+    grid-row: 1/2;
+    grid-column: 1/2;
 }
 
 @media (max-width: 900px) {
@@ -757,6 +786,98 @@ body {
         grid-column: 1/2;
         font-size: 2.8rem;
     }
+    .side-content {
+        grid-template: 1fr/ repeat(3, minmax(50px, 1fr));
+    }
+    .cards {
+        height: 80%;
+    }
+    .card {
+        height: 80%;
+    }
+    #modal__content--close {
+        width: 40px;
+        top: 10px;
+    }
+    .modal__title h2 {
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    .modal__content {
+        width: 90%;
+    }
 }
 
-@media (max-width: 600px) {}
+@media (max-width: 600px) {
+    .navbar__content ul {
+        display: none;
+    }
+    .navbar__content img {
+        width: 60px;
+        margin-left: 10px;
+    }
+    .navbar__content {
+        justify-content: space-between;
+        padding: 0;
+    }
+    .menu {
+        display: inline;
+        margin-right: 10px;
+        width: 80px;
+    }
+    .container {
+        grid-template: 15% 65% 20% / 55% 45%;
+        grid-template: 10% 45% 25% 20% / 100%;
+    }
+    .main-content {
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    .side-content {
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    .main-content p:nth-child(3) {
+        font-size: 1.6rem;
+        margin: 0;
+    }
+    .main-content p:nth-child(2) {
+        font-size: 1.6rem;
+        margin: 0 0 20px 0;
+    }
+    .main-content h1 {
+        font-size: 2.4rem;
+        margin: 0 0 20px 0;
+    }
+    .side-content h2 {
+        font-size: 2.2rem;
+    }
+    .side-content img {
+        width: 140px;
+    }
+    .footer {
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
+    .footer div img {
+        width: 100px;
+    }
+    .modal__content {
+        width: 90%;
+        height: 80%;
+        grid-template: 10% 40% 40% 10%/ 100%;
+    }
+    #modal__content--close {
+        width: 30px;
+        top: 10px;
+    }
+    .modal__title {
+        height: 100%;
+    }
+    .modal__title h2 {
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 0;
+    }
+}
