--- a/project-build-1/style.css
+++ b/project-build-1/style.css
@@ -40,7 +40,6 @@ header {
 }
 
 .nav {
-    z-index: 2;
     background: transparent;
     display: flex;
     flex-direction: column;
@@ -690,22 +689,117 @@ section {
 }
 
 .contact__location {
-    margin-top: 200px;
-    height: 80vh;
+    margin-top: 100px;
+    height: 60vh;
     width: 100%;
     display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 20% 80%;
     place-items: center;
 }
 
 .location__container {
     width: 80%;
-    height: 300px;
-    border: 2px solid #000;
+    height: 100%;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    place-self: center;
+}
+
+.contact__location h2 {
+    font-size: 4rem;
+    font-weight: 400;
+    border-left: 2px solid var(--red);
+}
+
+.about__text {
+    width: 100%;
+    height: 100vh;
+    background-image: url("https://i.ibb.co/qjrWgqg/contact-bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+}
+
+.about__text p,
+.about__text h3 {
+    width: 80%;
+    text-align: center;
+}
+
+.about__text p {
+    font-size: 4rem;
+    font-weight: 400;
+    line-height: 4rem;
+}
+
+.about__text h3 {
+    font-size: 3rem;
+    font-weight: 400;
+    color: var(--red);
+}
+
+.about__text img {
+    width: 80px;
+    margin-bottom: 20px;
+}
+
+.about__contact {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    background: var(--gradient-base);
+}
+
+.wrap-text {
+    text-align: start;
+}
+
+.wrap-text p:nth-child(1) {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.wrap-text p:nth-child(2) {
+    margin-top: 10px;
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+.contact__card-container {
+    margin-left: calc(50% - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact__card-container img {
+    width: 60px;
+    padding: 20px;
+    background: var(--red);
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
 }
 
 .footer {
     width: 100%;
-    height: 100%;
+    height: 30px;
     display: flex;
     justify-content: center;
     background: var(--grey-base);
