--- a/project-build-1/style.css
+++ b/project-build-1/style.css
@@ -205,6 +205,10 @@ section {
     grid-column: 1/3;
     grid-row: 2/3;
     align-self: center;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-items: center;
 }
 
 .home__title h1 {
@@ -212,7 +216,7 @@ section {
     font-size: 9rem;
     font-weight: 700;
     line-height: 10rem;
-    width: 60%;
+    width: 40%;
     word-wrap: break-word;
     background: var(--gradient-letter-home);
     -webkit-background-clip: text;
@@ -222,6 +226,10 @@ section {
 .home__subtitle {
     grid-column: 1/2;
     grid-row: 3/4;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    align-self: center;
 }
 
 .home__subtitle p {
@@ -515,6 +523,10 @@ section {
     color: var(--red);
 }
 
+.main__text .main__title p {
+    font-size: 4rem;
+}
+
 .main__text .main__paragraph p {
     font-size: 1.8rem;
     font-weight: 400;
@@ -527,7 +539,7 @@ section {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 30% 70%;
-    place-content: center;
+    place-items: center;
 }
 
 .team-wrapper {
@@ -624,10 +636,17 @@ section {
     place-self: center;
 }
 
+.space {
+    height: 80px;
+    width: 100%;
+}
+
 .team__cards {
     width: 100%;
     height: 100%;
     position: relative;
+    display: grid;
+    place-items: center;
 }
 
 .team__cards img {
@@ -707,8 +726,8 @@ section {
 }
 
 .contact__location {
-    margin-top: 100px;
-    height: 60vh;
+    margin-top: 200px;
+    height: 100vh;
     width: 100%;
     display: grid;
     grid-template-columns: 100%;
@@ -949,10 +968,16 @@ section {
         color: var(--white-base);
         display: block;
     }
+    .home__title h1 {
+        width: 60%;
+    }
     .home__top .home__number {
         font-size: 10rem;
         line-height: 10rem;
         width: 10%;
+    }
+    .main__text .main__title p {
+        font-size: 6.5rem;
     }
     .contact__main .img-container img {
         height: 100vh;
@@ -1009,6 +1034,51 @@ section {
     .footer {
         height: 50px;
     }
+    /* ABOUT US RESPONSIVE */
+    .team-wrapper .team-icons img {
+        width: 120px;
+        height: 120px;
+    }
+    .main__text .main__title h1 {
+        font-size: 6.5rem;
+    }
+    .main__text .main__paragraph p {
+        font-size: 3.5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(2) {
+        font-size: 5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(3) {
+        font-size: 2.5rem;
+    }
+    .team__our-team .our-team__text h2 {
+        font-size: 6rem;
+    }
+    .team__our-team .our-team__text p {
+        font-size: 3.5rem;
+        width: 100%;
+    }
+    .team__cards {
+        height: 100vh;
+    }
+    .team__cards img {
+        width: 340px;
+    }
+    .team-card h3 {
+        font-size: 3.2rem;
+    }
+    .team-card p {
+        font-size: 2.6rem;
+    }
+    .contact__location h2 {
+        font-size: 6.5rem;
+    }
+    .contact__location {
+        margin-top: 500px;
+    }
+    .contact__team {
+        margin-top: 200px;
+    }
 }
 
 @media (min-width: 900px) {
@@ -1031,6 +1101,7 @@ section {
     .home__title h1 {
         font-size: 20rem;
         line-height: 21rem;
+        width: 60%;
     }
     .home__subtitle p {
         font-size: 3.5rem;
@@ -1038,6 +1109,13 @@ section {
     }
     .nav .nav__links ul li a {
         font-size: 3rem;
+    }
+    .nav .nav__logo img {
+        width: 60px;
+        height: 60px;
+    }
+    .gallery__title h2 {
+        font-size: 8rem;
     }
     .gallery__container {
         width: 60%;
@@ -1049,9 +1127,67 @@ section {
         width: 52px;
         height: 52px;
     }
+    /* ABOUT US RESPONSIVE */
+    .team-wrapper {
+        width: 60%;
+    }
+    .team-wrapper .team-icons img {
+        width: 140px;
+        height: 140px;
+    }
+    .main__text .main__title h1 {
+        font-size: 10rem;
+    }
+    .main__text .main__title p {
+        font-size: 10rem;
+    }
+    .main__text .main__paragraph p {
+        font-size: 3.5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(2) {
+        font-size: 5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(3) {
+        font-size: 2.5rem;
+    }
+    .team__our-team .our-team__text h2 {
+        font-size: 8rem;
+    }
+    .team__our-team .our-team__text p {
+        font-size: 3.5rem;
+        width: 100%;
+    }
+    .team__cards img {
+        width: 440px;
+    }
+    .team-card h3 {
+        font-size: 4rem;
+    }
+    .team-card p {
+        font-size: 3.4rem;
+    }
+    .contact__location h2 {
+        font-size: 8rem;
+    }
+    .contact__location {
+        margin-top: 600px;
+    }
+}
+
+@media (min-width: 1600px) {
+    .home__title h1 {
+        width: 40%;
+    }
 }
 
 @media (min-width:2000px) {
+    .nav .nav__logo img {
+        width: 100px;
+        height: 100px;
+    }
+    .nav .nav__links ul li a {
+        font-size: 5.5rem;
+    }
     .home__top .home__number {
         font-size: 15rem;
         line-height: 15rem;
@@ -1061,6 +1197,12 @@ section {
         font-size: 30rem;
         line-height: 31rem;
     }
+    .main__text .main__title h1 {
+        font-size: 15rem;
+    }
+    .main__text .main__title p {
+        font-size: 15rem;
+    }
     .home__subtitle p {
         font-size: 4.5rem;
         line-height: 5rem;
@@ -1068,8 +1210,28 @@ section {
     .square {
         width: 150px;
     }
+    .square-01 {
+        height: 806px;
+    }
+    .square-02 {
+        height: 1010px;
+    }
+    .square-03 {
+        height: 947px;
+    }
     .home__figures {
         grid-template: 100% / repeat(3, minmax(30px, 200px));
+    }
+    .gallery__title h2 {
+        font-size: 10rem;
+    }
+    .gallery__container .card img {
+        width: 100px;
+        height: 100px;
+    }
+    .gallery__container .card h3 {
+        font-size: 7rem;
+        margin-bottom: 100px;
     }
     .gallery__container {
         width: 60%;
@@ -1087,5 +1249,47 @@ section {
     }
     .footer {
         height: 70px;
+    }
+    /* ABOUT US RESPONSIVE */
+    .team-wrapper {
+        width: 60%;
+    }
+    .team-wrapper .team-icons img {
+        width: 240px;
+        height: 240px;
+    }
+    .main__text .main__title h1 {
+        font-size: 14rem;
+    }
+    .main__text .main__paragraph p {
+        font-size: 6.5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(2) {
+        font-size: 5rem;
+    }
+    .team-wrapper .team-icons p:nth-child(3) {
+        font-size: 2.5rem;
+    }
+    .team__our-team .our-team__text h2 {
+        font-size: 12rem;
+    }
+    .team__our-team .our-team__text p {
+        font-size: 6.5rem;
+        width: 100%;
+    }
+    .team__cards img {
+        width: 640px;
+    }
+    .team-card h3 {
+        font-size: 4rem;
+    }
+    .team-card p {
+        font-size: 3.4rem;
+    }
+    .contact__location h2 {
+        font-size: 8rem;
+    }
+    .contact__location {
+        margin-top: 800px;
     }
 }
