--- a/curso-basic-js/rock-paper-scissors-game/style.css
+++ b/curso-basic-js/rock-paper-scissors-game/style.css
@@ -1,4 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+ :root {
+    /* COLOR PALLETTE  */
+    --blue: #488FB1;
+    --light-blue: #4C6F9F;
+    --purple: #533E85;
+    --green: #C1F8CF;
+    --aquamarine: #C1F8CF;
+    --black: #010101;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,4 +18,356 @@
 html {
     font-size: 62.5%;
     font-family: 'JetBrains Mono', monospace;
+}
+
+body {
+    overflow: hidden;
+}
+
+.navbar {
+    background: transparent;
+    display: flex;
+    width: 100vw;
+    height: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    background: var(--blue);
+    border-bottom: 2px solid var(--black);
+}
+
+.navbar img {
+    width: 35px;
+    height: 35px;
+    margin: 0 20px;
+}
+
+.navbar .navbar__toggle {
+    position: absolute;
+    right: 2rem;
+    top: .75rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 25px;
+}
+
+.navbar__toggle .bar-1,
+.navbar__toggle .bar-2,
+.navbar__toggle .bar-3 {
+    height: 5px;
+    width: 100%;
+    background-color: var(--green);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+    transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+}
+
+.navbar__toggle.open .bar-1 {
+    transform: rotate(45deg) translate(0px, 14px);
+    -webkit-transform: rotate(45deg) translate(0px, 14px);
+    -moz-transform: rotate(45deg) translate(0px, 14px);
+    -ms-transform: rotate(45deg) translate(0px, 14px);
+    -o-transform: rotate(45deg) translate(0px, 14px);
+}
+
+.navbar__toggle.open .bar-2 {
+    transform: translateX(50px);
+    -webkit-transform: translateX(50px);
+    -moz-transform: translateX(50px);
+    -ms-transform: translateX(50px);
+    -o-transform: translateX(50px);
+    background: transparent;
+    box-shadow: none;
+}
+
+.navbar__toggle.open .bar-3 {
+    transform: rotate(-45deg) translate(0px, -14px);
+    -webkit-transform: rotate(-45deg) translate(0px, -14px);
+    -moz-transform: rotate(-45deg) translate(0px, -14px);
+    -ms-transform: rotate(-45deg) translate(0px, -14px);
+    -o-transform: rotate(-45deg) translate(0px, -14px);
+}
+
+.navbar .nav__links {
+    display: none;
+    width: 100%;
+}
+
+.navbar .nav__links.actived {
+    display: flex;
+    animation-name: nav-links;
+    animation-duration: .8s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes nav-links {
+    0% {
+        opacity: 0;
+        transform: translateX(-300px);
+        -webkit-transform: translateX(-300px);
+        -moz-transform: translateX(-300px);
+        -ms-transform: translateX(-300px);
+        -o-transform: translateX(-300px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+        -webkit-transform: translateX(0px);
+        -moz-transform: translateX(0px);
+        -ms-transform: translateX(0px);
+        -o-transform: translateX(0px);
+    }
+}
+
+.navbar .nav__links ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.navbar .nav__links ul li {
+    list-style: none;
+    text-align: center;
+}
+
+.navbar .nav__links ul li a {
+    font-size: 2rem;
+    text-decoration: none;
+    font-weight: 700;
+    -webkit-text-stroke: .8px var(--black);
+    -webkit-text-fill-color: var(--green);
+    padding: .5rem .5rem;
+    display: block;
+    text-shadow: 2px 2px var(--black);
+    s
+}
+
+.navbar .nav__links ul li:hover {
+    background-color: var(--purple);
+}
+
+main {
+    height: 100vh;
+    background: var(--purple);
+}
+
+.card__content {
+    width: 100%;
+    height: 60%;
+    display: grid;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 100%;
+    position: relative;
+}
+
+.card__content h1 {
+    font-size: 3.6rem;
+    text-align: center;
+    -webkit-text-stroke: 2px var(--black);
+    -webkit-text-fill-color: var(--aquamarine);
+    text-shadow: 2px 2px var(--black);
+}
+
+.card__content .content__subtitle {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-size: 3.6rem;
+    font-weight: 700;
+    text-align: center;
+    -webkit-text-stroke: 2px var(--black);
+    -webkit-text-fill-color: var(--aquamarine);
+    text-shadow: 2px 2px var(--black);
+    margin-bottom: 50px;
+}
+
+
+/*  */
+
+.win__text {
+    /*  */
+    /*  */
+    font-size: 3.6rem;
+    /*  */
+    /*  */
+    font-weight: 700;
+    /*  */
+    /*  */
+    text-align: center;
+    /*  */
+    /*  */
+    -webkit-text-stroke: 1.5px var(--black);
+    /*  */
+    /*  */
+    text-shadow: 2px 2px var(--black);
+    -webkit-text-fill-color: var(--aquamarine);
+    /*  */
+    /*  */
+    /*  */
+    /*  */
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.cards-wrapper {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 45% 10% 45%;
+    grid-template-rows: 100%;
+    place-items: center;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.card-container .card__title,
+.card-container .card__subtitle {
+    font-size: 2.4rem;
+    font-weight: 900;
+    -webkit-text-stroke: 2px var(--black);
+    -webkit-text-fill-color: var(--aquamarine);
+    text-shadow: 2px 2px var(--black);
+}
+
+.card-container-1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.card-container-2 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.card-container .card__icon {
+    position: relative;
+    display: grid;
+    width: 120px;
+    height: 120px;
+    background: var(--black);
+    border: 5px solid var(--black);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    place-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.card-container .card__icon .img-flag {
+    width: 150px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background: var(--green);
+    opacity: .8;
+}
+
+.card-container-2 .card__icon .img-flag {
+    position: absolute;
+}
+
+.card-container .card__icon .card__img--over {
+    position: absolute;
+}
+
+.card-container .card__icon .card__img--over img {
+    width: 80px;
+}
+
+.table-container {
+    width: 100%;
+    height: 40vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(3, 20%);
+    background-color: var(--blue);
+    place-items: center;
+    font-size: 2.4rem;
+    font-weight: 900;
+    -webkit-text-stroke: 2px var(--black);
+    -webkit-text-fill-color: var(--aquamarine);
+    text-shadow: 2px 2px var(--black);
+    text-align: center;
+}
+
+.table-container .table__title {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid var(--black);
+    border-top: 2px solid var(--black);
+}
+
+.table-container .table__player-1 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background: var(--light-blue);
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid var(--black);
+}
+
+.table-container .table__player-2 {
+    grid-row: 2/3;
+    grid-column: 2/2;
+    background: var(--light-blue);
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid var(--black);
+}
+
+.table-container .table__score-1 {
+    background: var(--light-blue);
+    width: 100%;
+    height: 100%;
+    grid-row: 3/4;
+    grid-column: 1/2;
+    border-bottom: 2px solid var(--black);
+}
+
+.table-container .table__score-2 {
+    background: var(--light-blue);
+    width: 100%;
+    height: 100%;
+    grid-row: 3/4;
+    grid-column: 2/3;
+    border-bottom: 2px solid var(--black);
+}
+
+footer .icons-container {
+    width: 100%;
+    background: var(--blue);
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom: 2px solid var(--black);
+}
+
+footer img {
+    padding: 0 10px;
 }
